added fancy HTML table

--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "id": "e0c11127",
    "metadata": {
     "scrolled": true
@@ -377,7 +377,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mOverall accuracy\u001b[0m : 0.9761904761904762\n"
+      "\u001b[1mAccuracy\u001b[0m      : 0.9761904761904762\n",
+      "\u001b[1mHamming Loss\u001b[0m  : 0.023809523809523808\n",
+      "\u001b[1mCrossVal mean\u001b[0m : 0.8222222222222222\n"
      ]
     },
     {
@@ -438,14 +440,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mHamming Loss\u001b[0m  : 0.023809523809523808\n",
-      "\u001b[1mCrossVal mean\u001b[0m : 0.8222222222222222\n"
-     ]
     }
    ],
    "source": [
@@ -460,22 +454,21 @@
     "recall    = metrics.recall_score(testY, test_result, average=None)\n",
     "f1        = metrics.f1_score(testY, test_result, average=None)\n",
     "\n",
-    "print(\"\\033[1mOverall accuracy\\033[0m : {}\".format(accuracy))\n",
-    "\n",
-    "row_names = [\"Precision\", \"Recall\", \"F1\"]\n",
-    "col_names = list(set(transaction_df[\"label\"]))\n",
-    "col_names.sort()\n",
-    "\n",
-    "metrics_df = pd.DataFrame([precision] + [recall] + [f1], index=row_names, columns=names).transpose()\n",
-    "display(HTML(metrics_df.to_html()))\n",
-    "\n",
+    "print(\"\\033[1mAccuracy\\033[0m      : {}\".format(accuracy))\n",
     "print(\"\\033[1mHamming Loss\\033[0m  : {}\".format(hamming))\n",
     "\n",
     "# Cross validation with random permutation.\n",
     "crossval = ShuffleSplit(n_splits=10, test_size=0.2, random_state=5)\n",
     "scores = cross_val_score(model, testX, testY, cv=crossval)\n",
     "#print(scores)\n",
-    "print(\"\\033[1mCrossVal mean\\033[0m : {}\".format(scores.mean()))"
+    "print(\"\\033[1mCrossVal mean\\033[0m : {}\".format(scores.mean()))\n",
+    "\n",
+    "row_names = [\"Precision\", \"Recall\", \"F1\"]\n",
+    "col_names = list(set(transaction_df[\"label\"]))\n",
+    "col_names.sort()\n",
+    "\n",
+    "metrics_df = pd.DataFrame([precision] + [recall] + [f1], index=row_names, columns=names).transpose()\n",
+    "display(HTML(metrics_df.to_html()))"
    ]
   },
   {
@@ -508,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e2b5b341",
+   "id": "0431f190",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7ce3c7",
+   "id": "496160b4",
    "metadata": {},
    "outputs": [],
    "source": []
